--- a/src/Components/hello.html
+++ b/src/Components/hello.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis veritatis incidunt ipsa suscipit explicabo quos molestiae asperiores odit expedita mollitia animi, vitae ad amet ipsam nesciunt modi, totam similique! Temporibus!</h1>
+    <h1><button>CLICK ME</button></h1>
 </body>
 </html>
