--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,12 +1,15 @@
 nav {
   background-color: #e5e5e5;
   overflow: hidden;
+  padding: 10px;
+  margin-bottom: 20px;
 }
 
 nav ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  display: flex; 
 }
 
 nav li {
@@ -19,8 +22,14 @@ nav li a {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  font-weight: bold;
 }
 
 nav li a:hover {
   border-bottom: 2px solid black;
+  background-color: #d9d9d9;
+}
+
+nav .right {
+  margin-left: auto;
 }
